# medical-information-system

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  conanfile.py
src/domain/entities/: person.cpp  person.h
src/domain/value_objects/: date.cpp  date.h  gender_enum.h  id.cpp  id.h  oms_policy_number.cpp  oms_policy_number.h  phone_number.cpp  phone_number.h  text_string.cpp  text_string.h  word_string.cpp  word_string.h
src/shared_kernel/: entity.cpp  entity.h  enum_base.h  enum_base.tpp  string_base.cpp  string_base.h  value_object.h  value_object.tpp
src/utils/validators/: length_validator.cpp  length_validator.h  space_validator.cpp  space_validator.h
tests/: CMakeLists.txt
tests/entities/: person_test.cpp
tests/validators/: length_validator_test.cpp
tests/value_objects/: date_test.cpp  oms_policy_number_test.cpp  phone_number_test.cpp
